--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -418,18 +418,20 @@ en:
   mail_body_delete_user: A user account was deleted and its content was reassigned
     to anonymous user %{id}
   mail_security:
-    subject: "[Check] Security alert"
+    device_subject: "Security alert: new login to %{app_name} from %{browser} on %{platform}"
+    ip_subject: "Security alert: new or unusual %{app_name} login"
+    failed_subject: "Security alert: failed login attempts to %{app_name}"
     greeting: "Hi %{username},"
     ip: "You’ve signed in from %{location}"
     device: "You’ve signed in from %{browser} on %{platform}"
     devise_name: "%{browser} on %{platform}"
     failed: "Failed login attempts detected"
-    password_text: "change your password immediately"
-    device_text: "It looks like you recently signed into your Check account from a new device. 
+    password_text: "change your password immediately."
+    device_text: "It looks like you recently signed into your %{app_name} account from a new device.
       If that’s not the case, you should %{change_password}"
-    ip_text: "It looks like you recently signed into your Check account from a new location. 
+    ip_text: "It looks like you recently signed into your %{app_name} account from a new location.
       If that’s not the case, you should %{change_password}"
-    failed_text: "It looks like multiple attempts were made to login into your Check account. if this was you, you
+    failed_text: "It looks like multiple attempts were made to login into your %{app_name} account. If this was you, you
       can safely disregard this email. If this wasn't you, then you should %{change_password}"
     time_h: "Time"
     device_h: "Device"
@@ -438,7 +440,9 @@ en:
     privacy: "%{manage} your email notifications • Learn more about our %{privacy}"
     privacy_text: 'Privacy Policy' 
     manage_text: 'Manage'
-    copy_right: "Check by Meedan,1355 Market, Suite 488, San Francisco, CA 94103 United States"
+    privace_manage_plain: "Manage your email notifications"
+    privacy_plain: "Learn more about our Privacy Policy"
+    copy_right: "%{app_name} by Meedan,1355 Market, Suite 488, San Francisco, CA 94103 United States"
   archive_keep_backup: Video Vault
   archive_pender_archive: Keep screenshots
   archive_archive_is: Archive.is
