--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -397,6 +397,11 @@ ru:
 
       Если да, *отправьте 1*. Любой другой ответ завершит беседу.
   smooch_bot_window_closing: В настоящее время нам поступает очень много запросов, и ваш всё ещё находится в очереди. Спасибо за сообщение. Если вы хотите отправить ещё материалы, пожалуйста, не стесняйтесь!
+  smooch_bot_not_final: '[Отчёт о верификации — ИЗМЕНЕНИЕ] Сообщение, которое вы нам отправили, было некорректно отмечено как «*%{status}*». Сообщение возвращено в очередь и ожидает верификации.'
+  smooch_bot_result_changed: |-
+      [Отчёт о верификации — ИЗМЕНЕНИЕ] Сообщение, которое вы нам отправили, получило новую отметку: «*%{status}*» (ранее отмечено как «*%{previous_status}*»).
+
+      Вы можете ознакомиться со всеми шагами, предпринятыми для верификации, по ссылке: %{url}
   project_export_download_mail_csv: |-
       Здравствуйте!
 
@@ -501,6 +506,7 @@ ru:
   team_import_completed_subject: Импорт данных завершён
   team_import_completed_mail: "<p>Здравствуйте,</p> <p>Ваш запрос на импорт данных в %{app_name} выполнен. Чтобы проверить детальное состояние импорта по всем элементам, перейдите по ссылке: %{worksheet_url}.</p> <p>При наличии ошибок, вы можете исправить их и перезапустить импорт — элементы, которые уже были успешно импортированы, дублированы не будут.</p> <p>— Команда %{app_name}</p>"
   pender_url_invalid: Некорректная ссылка.
+  pender_url_unsafe: Небезопасная ссылка.
   verification_status_deadline: Дедлайн
   verification_status_deadline_asc: Сначала ранние
   verification_status_deadline_desc: Сначала поздние
@@ -509,3 +515,9 @@ ru:
   embed_collapse_all: Свернуть всё
   embed_tasks: Вопросы
   embed_description: Описание
+  other_language: Другой
+  unidentified_language: Неопределён
+  relationship_item_has_parent: Материал уже связан с другим материалом
+  smooch_requests: Запросы
+  smooch_requests_asc: Наименее запрашиваемые
+  smooch_requests_desc: Самые запрашиваемые
